--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,7 @@
 Home
+
+<% @posts.each do |post| %>
+<li><%= post.description %></li>
+<% end %>
+
+<%= link_to 'Create Post', new_user_post_path(current_user) %>
